--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,5 +29,24 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^3.0.0
 
+flutter_launcher_icons: 
+
+flutter_native_splash:
+  color: "#0087DE"
+  image: "assets/images/app_icon_2.png"
+  color_dark: "#0087DE"
+  image_dark: "assets/images/app_icon_2.png"
+  android_12:
+    image: "assets/images/app_icon_2.png"
+    color: "#0087DE"
+    icon_background_color: "#0087DE"
+  fullscreen: true  
+
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/images/
+
+
+# dart run flutter_native_splash:create --path=pubspec.yaml    
