--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,22 @@ dev_dependencies:
   flutter_lints: ^3.0.0
 
 flutter_launcher_icons: 
+  android: true
+  ios: true
+  min_sdk_android: 23
+  image_path: "assets/images/app_icon.png"
+  adaptive_icon_background: "#0087DE"
+  adaptive_icon_foreground: "assets/images/app_icon_2.png"
+  remove_alpha_ios: true
+  web:
+    generate: false
+  windows:
+    generate: true
+    image_path: "assets/images/app_icon.png"
+    icon_size: 48
+  macos:
+    generate: true
+    image_path: "assets/images/app_icon.png"
 
 flutter_native_splash:
   color: "#0087DE"
