--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,11 @@ dependencies:
   get: ^4.6.6
   get_storage: ^2.1.1
   intl: ^0.19.0
+  logger: ^2.2.0
   package_info_plus: ^8.0.0
+  path: ^1.9.0
+  path_provider: ^2.1.3
+  sqflite_common_ffi: ^2.3.3
   window_manager: ^0.3.8
 
 dev_dependencies:
@@ -64,5 +68,7 @@ flutter:
   assets:
     - assets/images/
 
+
+# sudo apt-get -y install libsqlite3-0 libsqlite3-dev
 
 # dart run flutter_native_splash:create --path=pubspec.yaml    
