--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   package_info_plus: ^8.0.0
   path: ^1.9.0
   path_provider: ^2.1.3
+  rpi_gpio: ^0.9.1
   sqflite_common_ffi: ^2.3.3
   window_manager: ^0.3.8
 
