--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   rpi_gpio: ^0.9.1
   sqflite_common_ffi: ^2.3.3
   window_manager: ^0.3.8
+  on_screen_keyboard_tr:
+    path: packages/on_screen_keyboard_tr/
 
 dev_dependencies:
   flutter_test:
