--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,13 +37,9 @@ dev_dependencies:
   flutter_lints: ^3.0.0
 
 flutter_launcher_icons: 
-  android: true
-  ios: true
-  min_sdk_android: 23
+  android: false
+  ios: false
   image_path: "assets/images/app_icon.png"
-  adaptive_icon_background: "#0087DE"
-  adaptive_icon_foreground: "assets/images/app_icon_2.png"
-  remove_alpha_ios: true
   web:
     generate: false
   windows:
@@ -75,6 +71,7 @@ flutter:
 # sudo apt-get -y install libsqlite3-0 libsqlite3-dev
 
 # dart run flutter_native_splash:create --path=pubspec.yaml    
+# dart run flutter_launcher_icons:main -f pubspec.yaml
 
 
 # scp -r /Users/io/Development/FlutterProjects/heethings/CentralHeatingControl/CHC pi@192.168.1.248:~/Development/CHC
