--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   window_manager: ^0.3.8
   on_screen_keyboard_tr:
     path: packages/on_screen_keyboard_tr/
+  network_info_plus: ^5.0.3
 
 dev_dependencies:
   flutter_test:
