--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,4 +75,5 @@ flutter:
 # dart run flutter_launcher_icons:main -f pubspec.yaml
 
 
-# scp -r /Users/io/Development/FlutterProjects/heethings/CentralHeatingControl/CHC pi@192.168.1.248:~/Development/CHC
+# rsync -avz ~/Development/FlutterProjects/heethings/CentralHeatingControl/CHC pi@192.168.1.248:~/Development
+
