--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,10 @@ dependencies:
   on_screen_keyboard_tr:
     path: modules/on_screen_keyboard_tr/
   network_info_plus: ^5.0.3
+  rpi_spi: 
+    path: modules/rpi_spi/
+  flutter_libserialport: ^0.4.0
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
