--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_libserialport: ^0.4.0
   google_fonts: ^6.2.1
   process_run: ^1.0.0+1
+  flutter_smart_dialog: ^4.9.7+9
 
 dev_dependencies:
   flutter_test:
