--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: central_heating_control
 description: "Central Heating Control by Heethings"
 publish_to: 'none'
-version: 1.0.47+1047
+version: 1.0.48+1048
 
 environment:
   sdk: '>=3.3.3 <4.0.0'
@@ -33,8 +33,8 @@ dependencies:
   screen_saver:
     path: modules/screen_saver/
   network_info_plus: ^5.0.3
-  rpi_spi: 
-    path: modules/rpi_spi/
+  # rpi_spi: 
+  #   path: modules/rpi_spi/
   flutter_libserialport: ^0.4.0
   google_fonts: ^6.2.1
   process_run: ^1.0.0+1
