--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: central_heating_control
 description: "Central Heating Control by Heethings"
 publish_to: 'none'
-version: 1.0.70+1070
+version: 1.0.70-alpha.1+1070
 
 environment:
   sdk: '>=3.3.3 <4.0.0'
