--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: central_heating_control
 description: "Central Heating Control by Heethings"
 publish_to: 'none'
-version: 1.2.0-alpha.86+1200
+version: 1.2.1+1201
 
 environment:
   sdk: '>=3.3.3 <4.0.0'
