--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: central_heating_control
 description: "Central Heating Control by Heethings"
 publish_to: 'none'
-version: 1.2.7+1207
+version: 1.2.8-dev.1+1208
 
 environment:
   sdk: '>=3.3.3 <4.0.0'
