--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: central_heating_control
 description: "Central Heating Control by Heethings"
 publish_to: 'none'
-version: 1.2.9-alpha.1+1209
+version: 1.3.0-dev.1+1300
 
 environment:
   sdk: '>=3.3.3 <4.0.0'
